--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">TIL</string>
     <string name="afr_font">fonts/DSEG7Modern-Bold.ttf</string>
+    <string name="refreshing">Refreshing device list...</string>
 </resources>
